--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "firebase-admin": "^10.0.2",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0",
+    "jspdf": "^2.5.1",
     "mdb-angular-ui-kit": "^1.6.1",
     "ng-particles": "^2.42.0",
     "ng-slideshow": "^0.8.2",
