--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.0.4",
     "@angular/cdk": "^11.1.1",
     "@angular/common": "~11.0.4",
@@ -41,12 +42,13 @@
     "angularfire2": "^5.4.2",
     "animate.css": "~3.7.2",
     "bootstrap": "^4.5.0",
-    "chart.js": "^3.1.1",
+    "chart.js": "^3.7.1",
     "cors": "^2.8.5",
     "firebase": "^8.0.0",
     "firebase-admin": "^10.0.2",
     "hammerjs": "^2.0.8",
     "immutable": "^4.0.0",
+    "mat-table-filter": "^10.2.0",
     "mdb-angular-ui-kit": "^1.6.1",
     "ng-particles": "^2.42.0",
     "ng-slideshow": "^0.8.2",
@@ -67,6 +69,7 @@
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
+    "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
