--- a/package.json
+++ b/package.json
@@ -50,18 +50,17 @@
     "immutable": "^4.0.0",
     "mat-table-filter": "^10.2.0",
     "mdb-angular-ui-kit": "^1.6.1",
-    "ng-particles": "^2.42.0",
+    "ng-particles": "^3.0.6",
     "ng-slideshow": "^0.8.2",
     "ngx-cookie": "^5.0.2",
     "ngx-cookie-service": "^13.1.2",
-    "particlesjs": "^2.2.3",
     "promise-polyfill": "8.2.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "socket.io-client": "^4.4.1",
     "tslib": "^2.0.0",
-    "tsparticles": "^1.42.0",
+    "tsparticles-engine": "^2.0.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
