--- a/package.json
+++ b/package.json
@@ -1,94 +1,94 @@
 {
-    "name": "kg-app-cicd",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --proxy-config proxy.config.json",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "build-prod": "ng build --prod",
-        "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
-        "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
-        "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive",
-        "postinstall": "ngcc"
-    },
-    "private": true,
-    "dependencies": {
-        "@agm/core": "^3.0.0-beta.0",
-        "@angular/animations": "~11.0.4",
-        "@angular/cdk": "^11.1.1",
-        "@angular/common": "~11.0.4",
-        "@angular/compiler": "~11.0.4",
-        "@angular/core": "~11.0.4",
-        "@angular/fire": "^6.1",
-        "@angular/forms": "~11.0.4",
-        "@angular/localize": "~11.0.4",
-        "@angular/material": "^11.1.1",
-        "@angular/platform-browser": "~11.0.4",
-        "@angular/platform-browser-dynamic": "~11.0.4",
-        "@angular/router": "~11.0.4",
-        "@fortawesome/angular-fontawesome": "^0.8.2",
-        "@fortawesome/fontawesome-free": "^5.15.1",
-        "@fortawesome/fontawesome-svg-core": "^1.2.34",
-        "@fortawesome/free-brands-svg-icons": "^5.15.2",
-        "@fortawesome/free-regular-svg-icons": "^5.15.2",
-        "@fortawesome/free-solid-svg-icons": "^5.15.2",
-        "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-        "@ngrx/store": "^10.1.2",
-        "@types/chart.js": "^2.7.40",
-        "angular-bootstrap-md": "^11.1.0",
-        "angularfire2": "^5.4.2",
-        "animate.css": "~3.7.2",
-        "bootstrap": "^4.5.0",
-        "chart.js": "^3.7.1",
-        "cors": "^2.8.5",
-        "firebase": "^8.0.0",
-        "firebase-admin": "^10.0.2",
-        "hammerjs": "^2.0.8",
-        "immutable": "^4.0.0",
-        "mat-table-filter": "^10.2.0",
-        "mdb-angular-ui-kit": "^1.6.1",
-        "ng-particles": "^3.0.6",
-        "ng-slideshow": "^0.8.2",
-        "ngx-cookie": "^5.0.2",
-        "ngx-cookie-service": "^13.1.2",
-        "promise-polyfill": "8.2.1",
-        "rxfire": "^6.0.0",
-        "rxjs": "~6.6.0",
-        "rxjs-compat": "^6.6.7",
-        "socket.io-client": "^4.4.1",
-        "tslib": "^2.0.0",
-        "tsparticles-engine": "^2.0.6",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/architect": ">= 0.900 < 0.1200",
-        "@angular-devkit/build-angular": "~0.1100.4",
-        "@angular/cli": "~11.0.4",
-        "@angular/compiler-cli": "~11.0.4",
-        "@types/googlemaps": "^3.39.13",
-        "@types/jasmine": "~3.6.0",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "firebase-tools": "^9.9",
-        "fuzzy": "^0.1.3",
-        "htmlhint": "^1.1.2",
-        "inquirer": "^6.2.2",
-        "inquirer-autocomplete-prompt": "^1.0.1",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.1.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "open": "^7.0.3",
-        "protractor": "~7.0.0",
-        "puppeteer": "^5.5.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "^4.0.8"
-    }
+  "name": "kg-app-cicd",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.config.json",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build-prod": "ng build --configuration production",
+    "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
+    "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
+    "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive",
+    "postinstall": "ngcc"
+  },
+  "private": true,
+  "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular/animations": "~12.2.16",
+    "@angular/cdk": "^11.1.1",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/fire": "^6.1",
+    "@angular/forms": "~12.2.16",
+    "@angular/localize": "~12.2.16",
+    "@angular/material": "^11.1.1",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@ngrx/store": "^10.1.2",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^11.1.0",
+    "angularfire2": "^5.4.2",
+    "animate.css": "~3.7.2",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^3.7.1",
+    "cors": "^2.8.5",
+    "firebase": "^8.0.0",
+    "firebase-admin": "^10.0.2",
+    "hammerjs": "^2.0.8",
+    "immutable": "^4.0.0",
+    "mat-table-filter": "^10.2.0",
+    "mdb-angular-ui-kit": "^1.6.1",
+    "ng-particles": "^3.0.6",
+    "ng-slideshow": "^0.8.2",
+    "ngx-cookie": "^5.0.2",
+    "ngx-cookie-service": "^13.1.2",
+    "promise-polyfill": "8.2.1",
+    "rxfire": "^6.0.0",
+    "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
+    "socket.io-client": "^4.4.1",
+    "tslib": "^2.0.0",
+    "tsparticles-engine": "^2.0.6",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/architect": "0.1202.17",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular/cli": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.16",
+    "@types/googlemaps": "^3.39.13",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "firebase-tools": "^9.9",
+    "fuzzy": "^0.1.3",
+    "htmlhint": "^1.1.2",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.19",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "open": "^7.0.3",
+    "protractor": "~7.0.0",
+    "puppeteer": "^5.5.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "^4.3.3"
+  }
 }
