--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "ng build --configuration production",
+    "build-prod": "ng build --prod",
     "test-ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessNoSandbox",
     "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive",
@@ -17,18 +17,18 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "~13.3.4",
-    "@angular/cdk": "^13.3.4",
-    "@angular/common": "~13.3.4",
-    "@angular/compiler": "~13.3.4",
-    "@angular/core": "~13.3.4",
+    "@angular/animations": "~11.0.4",
+    "@angular/cdk": "^11.1.1",
+    "@angular/common": "~11.0.4",
+    "@angular/compiler": "~11.0.4",
+    "@angular/core": "~11.0.4",
     "@angular/fire": "^6.1",
-    "@angular/forms": "~13.3.4",
-    "@angular/localize": "~13.3.4",
-    "@angular/material": "^13.3.4",
-    "@angular/platform-browser": "~13.3.4",
-    "@angular/platform-browser-dynamic": "~13.3.4",
-    "@angular/router": "~13.3.4",
+    "@angular/forms": "~11.0.4",
+    "@angular/localize": "~11.0.4",
+    "@angular/material": "^11.1.1",
+    "@angular/platform-browser": "~11.0.4",
+    "@angular/platform-browser-dynamic": "~11.0.4",
+    "@angular/router": "~11.0.4",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -46,30 +46,32 @@
     "cors": "^2.8.5",
     "firebase": "^8.0.0",
     "firebase-admin": "^10.0.2",
+    "hammerjs": "^2.0.8",
     "immutable": "^4.0.0",
     "mat-table-filter": "^10.2.0",
     "mdb-angular-ui-kit": "^1.6.1",
-    "ng-particles": "^3.0.6",
+    "ng-particles": "^2.42.0",
     "ng-slideshow": "^0.8.2",
     "ngx-cookie": "^5.0.2",
     "ngx-cookie-service": "^13.1.2",
+    "particlesjs": "^2.2.3",
     "promise-polyfill": "8.2.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "socket.io-client": "^4.4.1",
     "tslib": "^2.0.0",
-    "tsparticles-engine": "^2.0.6",
-    "zone.js": "~0.11.4"
+    "tsparticles": "^1.42.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1303.3",
-    "@angular-devkit/build-angular": "~13.3.3",
-    "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.4",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
     "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.41",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^9.9",
     "fuzzy": "^0.1.3",
@@ -78,7 +80,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.19",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -88,6 +90,6 @@
     "puppeteer": "^5.5.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "~4.0.2"
   }
 }
