--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ng-slideshow": "^0.8.2",
     "ngx-cookie": "^5.0.2",
     "ngx-cookie-service": "^13.1.2",
+    "ngx-toastr": "^11.3.3",
     "promise-polyfill": "8.2.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
