--- a/package.json
+++ b/package.json
@@ -47,14 +47,16 @@
     "firebase": "^8.0.0",
     "firebase-admin": "^10.0.2",
     "hammerjs": "^2.0.8",
+    "i": "^0.3.7",
     "immutable": "^4.0.0",
     "mat-table-filter": "^10.2.0",
     "mdb-angular-ui-kit": "^1.6.1",
     "ng-particles": "^2.4.0",
     "ng-slideshow": "^0.8.2",
     "ngx-cookie": "^5.0.2",
-    "ngx-cookie-service": "^13.1.2",
+    "ngx-cookie-service": "^11.0.2",
     "ngx-toastr": "^11.3.3",
+    "npm": "^8.9.0",
     "promise-polyfill": "8.2.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
