--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "e2e-ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN --non-interactive",
     "postinstall": "ngcc",
-    "aws-deploy" : "aws s3 sync dist/kg-app-cicd/ s3://frontbucketbin"
+    "aws-deploy": "aws s3 sync dist/kg-app-cicd/ s3://frontbucketbin"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +38,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngrx/store": "^10.1.2",
+    "@nguniversal/express-engine": "^13.1.1",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^11.1.0",
     "angularfire2": "^5.4.2",
@@ -45,6 +46,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^3.7.1",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "firebase": "^8.0.0",
     "firebase-admin": "^10.0.2",
     "hammerjs": "^2.0.8",
@@ -56,6 +58,7 @@
     "ng-slideshow": "^0.8.2",
     "ngx-cookie": "^5.0.2",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-device-detector": "^2.0.5",
     "ngx-toastr": "^11.3.3",
     "npm": "^8.9.0",
     "promise-polyfill": "8.2.1",
